--- a/besmart/client/home.html
+++ b/besmart/client/home.html
@@ -197,7 +197,11 @@
 			</nav>
 		</header>
 		<main></main>
-		<footer></footer>
+        <div class="main-grid">
+            <div class="add-equipment-button">
+                <button class="add-button">Click me</button>
+            </div>
+        </div>
 		<script
 			type="text/javascript"
 			src="./js/main.js"
