--- a/besmart/client/home.html
+++ b/besmart/client/home.html
@@ -196,8 +196,13 @@
 				</div>
 			</nav>
 		</header>
-		<main></main>
-		<footer></footer>
+		<main>
+			<div class="canvas__wrapper">
+				<canvas class="canvas-element"></canvas>
+			</div>
+		</main>
+		<footer>
+		</footer>
 		<script
 			type="text/javascript"
 			src="./js/main.js"
