Added add equipment drop down and connect buttons

--- a/besmart/client/home.html
+++ b/besmart/client/home.html
@@ -199,8 +199,19 @@
 		<main></main>
         <div class="main-grid">
             <div class="add-equipment-button">
-                <button class="add-button">Click me</button>
+                <select name="equipment" id="equipment-select">
+					<option value="">Add equipment</option>
+					<option value="">Option1</option>
+					<option value="">Option2</option>
+					<option value="">Option3</option>
+					<option value="">Option4</option>
+					<option value="">Option5</option>
+					<option value="">Option5</option>
+				</select>
             </div>
+			<div class="connect-button">
+				<button class="add-button">Connect</button>
+			</div>
         </div>
 		<script
 			type="text/javascript"
