added equipments and simulation logic

--- a/besmart/client/home.html
+++ b/besmart/client/home.html
@@ -61,11 +61,11 @@
 						<hr />
 					</div>
 					<ol class="profile__wrapper-list">
-						<li><a href="">link 1</a></li>
-						<li><a href="">link 2</a></li>
-						<li><a href="">link 3</a></li>
-						<li><a href="">link 4</a></li>
-						<li><a href="">link 5</a></li>
+						<li><a href="">Simulations</a></li>
+						<li><a href="">Certifications</a></li>
+						<li><a href="">Badges</a></li>
+						<li><a href="">Account</a></li>
+						<li><a href="">Help</a></li>
 						<li>
 							<button class="profile__logoutbtn" title="Logout from your account">
 								LOGOUT
@@ -105,16 +105,8 @@
 		</nav>
 	</header>
 	<main>
-		<div class="add-equipment-button">
-			<select name="equipment" id="equipment-select">
-				<option value="">Add equipment</option>
-				<option value="">Option1</option>
-				<option value="">Option2</option>
-				<option value="">Option3</option>
-				<option value="">Option4</option>
-				<option value="">Option5</option>
-				<option value="">Option5</option>
-			</select>
+		<div id="add-equipment-button" class="add-equipment-button">
+			
 		</div>
 		<div class="connect-button">
 			<button class="add-button">Connect</button>
