--- a/besmart/client/home.html
+++ b/besmart/client/home.html
@@ -112,7 +112,7 @@
 			<button class="add-button">Connect</button>
 		</div>
 		<div class="canvas__wrapper">
-			<canvas class="canvas-element"></canvas>
+			<canvas id="viewport" class="canvas-element"></canvas>
 		</div>
 
 		<div class="clear-button">
