changed equipment image size and added movement to the canvas equipments.

--- a/besmart/client/home.html
+++ b/besmart/client/home.html
@@ -105,30 +105,25 @@
 		</nav>
 	</header>
 	<main>
-		<div id="add-equipment-button" class="add-equipment-button">
-			
-		</div>
+		<div id="add-equipment-button" class="add-equipment-button"></div>
 		<div class="connect-button">
 			<button class="add-button">Connect</button>
 		</div>
 		<div class="canvas__wrapper">
 			<canvas id="viewport" class="canvas-element"></canvas>
 		</div>
-
 		<div class="clear-button">
 			<button>Clear</button>
 		</div>
-
 		<div class="test-button">
 			<button>Test</button>
 		</div>
-
 		<div class="save-button">
 			<button>Save</button>
 		</div>
 	</main>
 	<script type="text/javascript" src="./js/main.js"></script>
-	<script type="text/javascript" src="js/home.js"></script>
+	<script type="text/javascript" src="./js/home.js"></script>
 </body>
 
 </html>
